config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    field.cattle.io/publicEndpoints: '[{"addresses":["157.90.171.202"],"port":443,"protocol":"HTTPS","serviceName":"default:leviticus","ingressName":"default:test-ingress","hostname":"test.sevi.io","path":"/file","allNodes":true}]'
  creationTimestamp: "2022-04-21T09:26:57Z"
  generation: 2
  labels:
    workload.user.cattle.io/workloadselector: apps.deployment-default-leviticus
  managedFields:
    - apiVersion: apps/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            f:deployment.kubernetes.io/revision: {}
        f:status:
          f:availableReplicas: {}
          f:conditions:
            .: {}
            k:{"type":"Available"}:
              .: {}
              f:lastTransitionTime: {}
              f:lastUpdateTime: {}
              f:message: {}
              f:reason: {}
              f:status: {}
              f:type: {}
            k:{"type":"Progressing"}:
              .: {}
              f:lastTransitionTime: {}
              f:lastUpdateTime: {}
              f:message: {}
              f:reason: {}
              f:status: {}
              f:type: {}
          f:observedGeneration: {}
          f:readyReplicas: {}
          f:replicas: {}
          f:updatedReplicas: {}
      manager: kube-controller-manager
      operation: Update
      time: "2022-04-21T09:26:59Z"
    - apiVersion: apps/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:field.cattle.io/publicEndpoints: {}
          f:labels:
            .: {}
            f:workload.user.cattle.io/workloadselector: {}
        f:spec:
          f:progressDeadlineSeconds: {}
          f:replicas: {}
          f:revisionHistoryLimit: {}
          f:selector: {}
          f:strategy:
            f:rollingUpdate:
              .: {}
              f:maxSurge: {}
              f:maxUnavailable: {}
            f:type: {}
          f:template:
            f:metadata:
              f:annotations:
                .: {}
                f:cattle.io/timestamp: {}
                f:kubectl.kubernetes.io/restartedAt: {}
              f:labels:
                .: {}
                f:workload.user.cattle.io/workloadselector: {}
            f:spec:
              f:affinity: {}
              f:containers:
                k:{"name":"leviticus"}:
                  .: {}
                  f:env:
                    .: {}
                    k:{"name":"ELASTIC_PASSWORD"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                    k:{"name":"ELASTIC_URL"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                    k:{"name":"ELASTIC_USERNAME"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                    k:{"name":"NODE_ENV"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                  f:image: {}
                  f:imagePullPolicy: {}
                  f:name: {}
                  f:ports:
                    .: {}
                    k:{"containerPort":7000,"protocol":"TCP"}:
                      .: {}
                      f:containerPort: {}
                      f:name: {}
                      f:protocol: {}
                  f:resources: {}
                  f:terminationMessagePath: {}
                  f:terminationMessagePolicy: {}
              f:dnsPolicy: {}
              f:imagePullSecrets:
                .: {}
                k:{"name":"github"}:
                  .: {}
                  f:name: {}
              f:restartPolicy: {}
              f:schedulerName: {}
              f:securityContext: {}
              f:terminationGracePeriodSeconds: {}
      manager: agent
      operation: Update
      time: "2022-04-21T09:31:43Z"
  name: leviticus
  namespace: default
  resourceVersion: "1198527"
  uid: 84807a95-c98c-4cc9-bd06-ff54ddcdd411
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: apps.deployment-default-leviticus
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        cattle.io/timestamp: "2022-04-17T18:59:54Z"
        kubectl.kubernetes.io/restartedAt: "2022-04-21T09:26:01Z"
      creationTimestamp: null
      labels:
        workload.user.cattle.io/workloadselector: apps.deployment-default-leviticus
    spec:
      affinity: {}
      containers:
        - env:
            - name: ELASTIC_PASSWORD
              value: e0F5Ekp9uDHTqBjl0HeinesJ
            - name: ELASTIC_URL
              value: https://d80c9609865141c58768f3a8590d096e.eu-central-1.aws.cloud.es.io:9243
            - name: ELASTIC_USERNAME
              value: elastic
            - name: NODE_ENV
              value: production
          image: ghcr.io/sevifinance/leviticus:latest
          imagePullPolicy: Always
          name: leviticus
          ports:
            - containerPort: 7000
              name: internal
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: github
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
    - lastTransitionTime: "2022-04-21T09:26:59Z"
      lastUpdateTime: "2022-04-21T09:26:59Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2022-04-21T09:26:57Z"
      lastUpdateTime: "2022-04-21T09:26:59Z"
      message: ReplicaSet "leviticus-56f89947df" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
